[package]
name = "apv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.35"
tao = { version = "0.24", default-features = false,features = ["rwh_05"] }
tempdir = "0.3"
clap = { version = "4", features = ["derive"] }
url = "2.5.0"
eyre = "0.6"
fs_extra = "1.3.0"